# Blazeycc

./: .eslintrc.js  .gitignore  LICENSE  PRICING.md  README.md  SPONSORS.md  Source Code (tar).tar  Source Code (tar.gz)  app.js  index.html  main.js  package-lock.json  package.json  playwright.config.js  preload.js  styles.css  vite.config.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-native-libs.yml  build.yml  pr-checks.yml  release.yml  sponsor-license.yml
docs/: CNAME  COMPETITIVE-ANALYSIS.md  SPONSOR_AUTOMATION.md  USER_GUIDE.md  index.html  license.html  pricing.html  style.css
js/: ai-features.js  ai.js  annotations.js  app.js  features.js  recording.js  state.js  ui.js
mobile/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  vite.config.js
mobile/plugins/local-llm/: build-native.sh  package.json
mobile/plugins/local-llm/android/: build.gradle
mobile/plugins/local-llm/android/src/main/cpp/: CMakeLists.txt  local-llm-jni.cpp
mobile/plugins/local-llm/android/src/main/jniLibs/: README.md
mobile/plugins/screen-recorder/: package-lock.json  package.json
mobile/plugins/screen-recorder/src/: definitions.ts  index.ts  web.ts
mobile/src/: index.html
mobile/src/css/: mobile.css
mobile/src/js/: mobile-app.js
scripts/: send-sponsor-license.js
src/: App.jsx  index.css
src/db/: database.js
tests/: basic.spec.js
webhook-relay/: README.md  cloudflare-worker.js  wrangler.toml
workers/license-api/: README.md  index.js  schema.sql  wrangler.toml
(+2 files in other folders)
